After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649593 - GtkProgressBar theming fixes
GtkProgressBar theming fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-05-06 18:56 UTC by Cosimo Cecchi
Modified: 2011-05-06 19:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cellrendererprogress: don't force drawing inside the border (2.01 KB, patch)
2011-05-06 18:56 UTC, Cosimo Cecchi
committed Details | Review
progressbar: fetch the padding without the trough style class (1.19 KB, patch)
2011-05-06 18:56 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-05-06 18:56:29 UTC
There are two issues with the theming of progress bars, addressed by these two patches.

The cell renderer patch fixes some confusion between border and padding.
The GtkProgressBar fixes the case where one instance of the padding value was fetched with the trough style class, only at one point in the whole widget.

Note that these allow for removing quite some hacks in the Adwaita theme \o/
Comment 1 Cosimo Cecchi 2011-05-06 18:56:30 UTC
Created attachment 187377 [details] [review]
cellrendererprogress: don't force drawing inside the border

The progressbar is composed by two different rendered areas: the trough
(i.e. the non-filled part of the bar) and the bar itself.

The bar should be able to fill the whole height/width of the trough
without resorting to nasty hacks in the theme, and we can control the
amount of space between the bar and the trough with the padding already.
Comment 2 Cosimo Cecchi 2011-05-06 18:56:36 UTC
Created attachment 187378 [details] [review]
progressbar: fetch the padding without the trough style class

This is consistent with the rest of the widget, which uses only one
padding value.
Comment 3 Matthias Clasen 2011-05-06 18:58:31 UTC
Looks fine to me, if it fixes things...
Comment 4 Cosimo Cecchi 2011-05-06 19:11:01 UTC
Attachment 187377 [details] pushed as 73d9ca6 - cellrendererprogress: don't force drawing inside the border
Attachment 187378 [details] pushed as 579afaa - progressbar: fetch the padding without the trough style class